Improve User Activity

--- a/utils/lang/en-gb.json
+++ b/utils/lang/en-gb.json
@@ -109,6 +109,7 @@
         "sh_pro": "Special Hunter Pro",
         "blast_checker": "Blast Checker",
         "qrew_checker": "QRew Checker",
+        "universal_capper": "Universal Capper",
         "poi_challenge": "POI Challenge",
         "colour_challenge": "Colour Challenge",
         "your_clan": "Your Clan",
